<resources>
    <string name="app_name">Scripture Journal</string>
    <string name="enter">Please Enter your favorite Scripture.</string>

    <string name="book">Book:</string>
    <string name="chapter">Chapter:</string>
    <string name="verse">Verse:</string>
    <string name="display">Display</string>
    <string name="save">Save Scripture</string>
    <string name="load">Load Scripture</string>

</resources>